# web_automatization_project

./: .gitignore  LICENSE  README.md  automatization.ipynb  pyproject.toml  streamlit_test.py
